# cuda-mandel3d

./: .gitignore  CMakeLists.txt  README.md  common.cuh  imshow.py
include/: config.cuh  mathlib.cuh
shell/: build.sh  test.sh
src/: a.cu
